# FakeProjectiveSpaces

./: .gitignore  CMakeLists.txt  README.md  parseCFunctions.py  parsed_C_dim8nfp6dets.txt
determinants/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c
include/: LibFkps.h  LibFkpsConfig.h  LibFkpsDeterminantQ.h  LibfkpsDeterminantQ.h  detfuncparsed.h  fkps.h  fkpscdefs.h  fkpspartition.h  libfkpsconfig.h  partitionsbatch.h
src/: LibFkpsBatch.cc  LibFkpsDeterminantQ.hh  LibFkpsInit.cc  LibFkpsLogging.cc  LibFkpsLogging.hh  LibFkpsUtils.cc  LibFkpsUtils.hh  LibFkpsUtilsPartitionBatch.cc  LibfkpsDeterminantQ.cc  LibfkpsDeterminantQ.hh  app_main.cc  fkps.cc  fkpsdefinitions.hh  fkpspartition.cc  partitionsbatch.cc
src/app/: CMakeLists.txt  app_main.cc
src/app/commands/: FkpsCommandCompile.cc  FkpsCommandCompute.cc  FkpsCommandGenerate.cc  FkpsCommands.hh
src/app/cuda/: FkpsCommandCompile.cc  FkpsCommandCompute.cc  FkpsCommandGenerate.cc  FkpsCommands.hh
src/libfkps/: CMakeLists.txt  LibFkps.hh  LibFkpsBatchAdd.cc  LibFkpsBatchCompute.cc  LibFkpsBatchFlush.cc  LibFkpsBatchFree.cc  LibFkpsBatchGet.cc  LibFkpsBatchIncrement.cc  LibFkpsBatchInit.cc  LibFkpsBatchNew.cc  LibFkpsDeinit.cc  LibFkpsErrToChar.cc  LibFkpsGenerate.cc  LibFkpsInit.cc
src/libfkps/cuda/: LibFkpsCompile.cc  LibFkpsCompile.cu  LibFkpsLoad.cc  LibFkpsLoad.cu  LibFkpsSolve.cc  LibFkpsSolve.cu
